# rust-ppay

./: Cargo.toml  Makefile  docker-compose.yaml  readme.md
mongo-entrypoint/: entrypoint.js
src/: main.rs
src/app/: mod.rs
src/app/customers/: mod.rs
src/app/customers/controller/: controller.rs
src/app/customers/dto/: dto.rs
src/app/customers/model/: customer.rs  customer_types.rs  mod.rs
src/app/customers/routes/: route.rs
src/app/health/routes/: route.rs
src/config/: config.app.toml
src/libs/: error.rs  ipinfo.rs  jwt.rs  mod.rs  util.rs  validator.rs
src/middlewares/: auth.rs  check_user.rs  mod.rs
src/setup/databases/: mongo.rs
