[package]
name = "peoplespay-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-http = "3.8.0"
actix-web = "4.8.0"
aes = "0.8.4"
anyhow = "1.0.86"
base64 = "0.22.1"
cbc = "0.1.2"
chrono = "0.4.38"
config = "0.14.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.22"
md5 = "0.7.0"
mongodb = "3.0.0"
rand = "0.8.5"
redis = "0.25.4"
regex = "1.10.5"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sha2 = "0.10.8"
uuid = "1.9.1"
